// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with inValid prop 1`] = `
<select
  className="sc-jAaTju cgCdKQ"
/>
`;

exports[`renders correctly with no props 1`] = `
<select
  className="sc-jAaTju dKkScg"
/>
`;

exports[`renders correctly with noBg prop 1`] = `
<select
  className="sc-jAaTju kdEJkS"
/>
`;

exports[`renders correctly with valid prop 1`] = `
<select
  className="sc-jAaTju hdIsiu"
/>
`;
